Sửa thông tin bảng bị thiếu

--- a/Giaodien/form-print.html
+++ b/Giaodien/form-print.html
@@ -61,6 +61,8 @@
                         <th>Amount<span class="font-italic">(USD or VND)</span></th>
                         <th>Owner of Item</th>
                         <th>Cost Center</th>
+                        <th width="50px">（A)→Asset
+                            （K)→Expense</th>
                         <th>Account code</th>
                         <th>Asset No.</th>
                     </thead>
@@ -78,6 +80,7 @@
                             C→Customer</th>
                         <th class="font-weight-normal">AI/SMT/FAT/
                             Other/Office</th>
+                        <th></th>
                         <th class="font-weight-normal">Tài khoản</th>
                         <th class="font-weight-normal">Số tài khoản</th>
                     </thead>
