--- a/Giaodien/form.html
+++ b/Giaodien/form.html
@@ -34,7 +34,7 @@
 
                     </div>
                     <hr>
-                    <form action="">
+                    <form>
                         <div class="row">
                             <div class="col-3">
                                 <label class="font-weight-bold lang" key="issus-date">Issus date</label>
@@ -181,6 +181,8 @@
                                     <th class="lang" key="table-amount" width="100px">Amount<span class="font-italic">(USD or VND)</span></th>
                                     <th class="lang" key="table-owner-of-item" width="50px">Owner of Item</th>
                                     <th class="lang" key="table-cost-center" width="50px">Cost Center</th>
+                                    <th width="50px">（A)→Asset 
+                                        （K)→Expense</th>
                                     <th class="lang" key="table-amount">Account code</th>
                                     <th class="lang" key="table-account-no">Asset No.</th>
                                     <th></th>
