--- a/Giaodien/admin.html
+++ b/Giaodien/admin.html
@@ -12,46 +12,17 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.css">
-   
+
     <title>Document</title>
 </head>
 
 <body>
-    <div id="steps-form-detail" class="steps-form container mt-5">
-        <div id="step-form" class="steps-row setup-panel">
-            <div id="step-1" class="steps-step context-menu-1">
-                <a class="btn btn-secondary text-white btn-circle btn-secondary" href="javascript:void(0)">1</a>
-                <pre>Dept Manager</pre>
-
-            </div>
-            <div id="step-2" class="steps-step context-menu-2">
-                <a href="javascript:void(0)" class="btn btn-secondary text-white btn-circle">2</a>
-                <pre>Assets</pre>
-            </div>
-            <div id="step-3" class="steps-step context-menu-3">
-                <a href="javascript:void(0)" class="btn btn-secondary text-white btn-circle">3</a>
-                <pre>Factory Manager</pre>
-            </div>
-            <div id="step-4" class="steps-step context-menu-4">
-                <a href="javascript:void(0)" class="btn btn-secondary text-white btn-circle">4</a>
-                <pre>General Director</pre>
-            </div>
-            <div id="step-5" class="steps-step context-menu-5">
-                <a href="javascript:void(0)" class="btn btn-secondary text-white btn-circle">5</a>
-                <pre>Purchasing Dept</pre>
-            </div>
-            <div id="step-6" class="steps-step context-menu-6">
-                <a href="javascript:void(0)" class="btn btn-secondary text-white btn-circle">6</a>
-                <pre>Applicant</pre>
-            </div>
-            <div id="step-7" class="steps-step context-menu-7">
-                <a href="javascript:void(0)" class="btn btn-secondary text-white btn-circle">7</a>
-                <pre>Asset Center</pre>
-            </div>
-        </div>
-
+    
+    <div class="step-follow mt-5">
+        <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" class="container steps-form">
+        </svg>
+      
     </div>
-
     <div id="submitors" class="container">
         <input class="form-control" id="searchUser" type="text" placeholder="Tìm kiếm">
         <br>
@@ -86,7 +57,7 @@
 
         </ul>
     </div>
-  
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.js"></script>
 
