Thêm tự công amount khi nhập

--- a/Giaodien/form-view.html
+++ b/Giaodien/form-view.html
@@ -291,7 +291,7 @@
                                         <th class="font-weight-normal lang" key="table-account">Tài khoản</th>
                                         <th class="font-weight-normal lang" key="table-account-no">Số tài khoản</th>
                                     </thead>
-                                    <tbody>
+                                    <tbody  id="tableInfo">
                                         <tr>
                                             <td>1</td>
                                             <td></td>
@@ -301,7 +301,7 @@
                                             <td></td>
                                             <td></td>
                                             <td></td>
-                                            <td></td>
+                                            <td>100</td>
                                             <td></td>
                                             <td></td>
                                             <td></td>
@@ -392,7 +392,7 @@
                                             <td colspan="6"></td>
                                             <td colspan="2" class="lang" key="table-total text-uppercase">TOTAL
                                             </td>
-                                            <td class="font-weight-bold">0</td>
+                                            <td class="font-weight-bold total">0</td>
                                             <td colspan="2" class="font-weight-bold">（USD or VND）</td>
                                             <td></td>
                                             <td></td>
